--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "browser-data-cortex",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "Easy integration with Data Cortex from a browser",
   "repository": {
     "type": "git",
@@ -20,11 +20,11 @@
   "files": [
     "dist"
   ],
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-preset-env": "^1.6.1",
     "rollup": "^0.58.2",
     "rollup-plugin-babel": "^3.0.4",
