--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "browser-data-cortex",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "description": "Easy integration with Data Cortex from a browser",
   "repository": {
     "type": "git",
@@ -12,7 +12,8 @@
   "license": "MIT",
   "scripts": {
     "build": "rollup -c",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "lint": "eslint src"
   },
   "main": "dist/browser-data-cortex.min.js",
   "module": "dist/browser-data-cortex.min.js",
