--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,14 @@
 {
-  "presets": [[
-    "env",
-    {
-      "modules": false,
-      "targets": {
-        "browsers": ["> 1%", "not ie < 10", "android >= 4.2"]
+  "presets": [
+    [
+      "env",
+      {
+        "modules": false,
+        "targets": {
+          "browsers": ["> 1%", "not ie < 10", "android >= 4.2"]
+        }
       }
-    }
-  ]],
-  "plugins": [ "external-helpers", "transform-object-assign" ]
+    ]
+  ],
+  "plugins": ["external-helpers", "transform-object-assign"]
 }
