--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,13 @@
 {
   "presets": [
     [
-      "env",
+      "@babel/preset-env",
       {
         "modules": false,
         "targets": {
-          "browsers": ["> 1%", "not ie < 10", "android >= 4.2"]
+          "browsers": ["> 1%", "last 2 versions", "not dead"]
         }
       }
     ]
-  ],
-  "plugins": ["external-helpers", "transform-object-assign"]
+  ]
 }
