--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "build:watch": "rollup -c --watch",
     "lint": "eslint src --fix",
     "pretty": "prettier -u --write \"**/*\" --log-level warn",
-    "test": "node test/unit.test.js && node test/comprehensive-real-server-test.js",
+    "test": "node test/unit.test.js && node test/boundary-parameter-test.js",
     "test:unit": "node test/unit.test.js",
     "test:server": "node test/real-server-test.js",
     "test:comprehensive": "node test/comprehensive-real-server-test.js",
+    "test:boundary": "node test/boundary-parameter-test.js",
     "test:coverage": "node --experimental-test-coverage test/coverage.test.js",
     "test:coverage-report": "node scripts/coverage-report.js",
     "test:watch": "node --watch test/unit.test.js",
