--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
   "main": "dist/browser-data-cortex.min.js",
   "module": "dist/browser-data-cortex.min.js",
   "browser": "dist/browser-data-cortex.min.js",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/browser-data-cortex.min.js",
       "require": "./dist/browser-data-cortex.min.js",
-      "browser": "./dist/browser-data-cortex.min.js"
+      "browser": "./dist/browser-data-cortex.min.js",
+      "types": "./dist/index.d.ts"
     }
   },
   "files": [
     "dist",
-    "src"
+    "src",
+    "*.d.ts"
   ],
   "scripts": {
     "build": "rm -rf dist && rollup -c",
@@ -48,7 +51,6 @@
     "events",
     "logging"
   ],
-  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.8",
@@ -58,6 +60,8 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-replace": "^5.0.5",
     "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.1.4",
+    "@types/node": "^24.2.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
@@ -66,7 +70,9 @@
     "globals": "^15.9.0",
     "jsdom": "^23.2.0",
     "prettier": "^3.2.4",
-    "rollup": "^4.9.6"
+    "rollup": "^4.9.6",
+    "tslib": "^2.8.1",
+    "typescript": "^5.9.2"
   },
   "engines": {
     "node": ">=16.0.0"
