--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "scripts": {
     "build": "rm -rf dist && rollup -c",
     "build:watch": "rollup -c --watch",
+    "ts-check": "tsc --noEmit",
     "lint": "eslint src --fix",
     "pretty": "prettier -u --write \"**/*\" --log-level warn",
     "test": "node test/unit.test.js && node test/boundary-parameter-test.js",
@@ -55,7 +56,6 @@
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.8",
     "@eslint/js": "^9.8.0",
-    "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-replace": "^5.0.5",
