--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "build:watch": "rollup -c --watch",
     "ts-check": "tsc --noEmit",
     "lint": "eslint src --fix",
+    "lint:check": "eslint src",
+    "lint:all": "eslint src test --fix",
+    "lint:all:check": "eslint src test",
     "pretty": "prettier -u --write \"**/*\" --log-level warn",
     "test": "node test/all-tests.js",
     "test:unit": "node test/unit.test.js",
@@ -62,6 +65,8 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.4",
     "@types/node": "^24.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.39.0",
+    "@typescript-eslint/parser": "^8.39.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
