better build, constants

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,7 @@
     "lib": ["ES2018", "DOM"],
     "module": "ESNext",
     "moduleResolution": "node",
-    "declaration": true,
-    "declarationDir": "./dist",
+    "declaration": false,
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
