--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "jsdom": "^23.2.0",
     "prettier": "^3.2.4",
     "rollup": "^4.9.6",
+    "rollup-plugin-dts": "^6.2.1",
     "tslib": "^2.8.1",
     "typescript": "^5.9.2"
   },
