--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,55 @@
 {
   "compilerOptions": {
     "target": "ES2018",
-    "lib": ["ES2018", "DOM", "DOM.Iterable", "WebWorker"],
+    "lib": ["ES2018", "DOM"],
     "module": "ESNext",
     "moduleResolution": "node",
-    "declaration": false,
+    "declaration": true,
     "outDir": "./dist",
     "rootDir": "./src",
+    
+    // Strict Type Checking Options
     "strict": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictBindCallApply": true,
+    "strictPropertyInitialization": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    
+    // Additional Checks
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "exactOptionalPropertyTypes": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true,
+    "noPropertyAccessFromIndexSignature": true,
+    
+    // Module Resolution Options
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "forceConsistentCasingInFileNames": true,
+    
+    // Emit Options
     "noEmit": false,
     "sourceMap": true,
     "removeComments": false,
     "preserveConstEnums": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    
+    // Advanced Options
+    "skipLibCheck": true,
+    "useDefineForClassFields": true,
+    "verbatimModuleSyntax": true,
+    
+    // Experimental Options (only if needed)
+    "experimentalDecorators": false,
+    "emitDecoratorMetadata": false
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "test"]
+  "exclude": ["node_modules", "dist", "test", "**/*.test.ts", "**/*.spec.ts"]
 }
