--- a/package.json
+++ b/package.json
@@ -37,14 +37,22 @@
     "lint:all": "eslint src test --fix",
     "lint:all:check": "eslint src test",
     "pretty": "prettier -u --write \"**/*\" --log-level warn",
-    "test": "yarn build && node test/all-tests.js",
-    "test:unit": "node test/unit.test.js",
-    "test:server": "node test/real-server-test.js",
-    "test:comprehensive": "node test/comprehensive-real-server-test.js",
-    "test:boundary": "node test/boundary-parameter-test.js",
+    "test": "yarn build && tsx test/all-tests.ts",
+    "test:js": "yarn build && node test/all-tests.js",
+    "test:unit": "tsx test/unit.test.ts",
+    "test:unit:js": "node test/unit.test.js",
+    "test:simple": "tsx test/simple.test.ts",
+    "test:server": "tsx test/real-server-test.ts",
+    "test:server:js": "node test/real-server-test.js",
+    "test:comprehensive": "tsx test/comprehensive-real-server-test.ts",
+    "test:comprehensive:js": "node test/comprehensive-real-server-test.js",
+    "test:boundary": "tsx test/boundary-parameter-test.ts",
+    "test:boundary:js": "node test/boundary-parameter-test.js",
+    "test:user-agent": "tsx test/user-agent-tests.ts",
+    "test:user-agent:js": "node test/user-agent-tests.js",
     "test:coverage": "node --experimental-test-coverage test/coverage.test.js",
     "test:coverage-report": "node scripts/coverage-report.js",
-    "test:watch": "node --watch test/unit.test.js"
+    "test:watch": "tsx --watch test/unit.test.ts"
   },
   "keywords": [
     "analytics",
@@ -63,6 +71,7 @@
     "@rollup/plugin-replace": "^5.0.5",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.4",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^24.2.0",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
@@ -77,6 +86,7 @@
     "rollup": "^4.9.6",
     "rollup-plugin-dts": "^6.2.1",
     "tslib": "^2.8.1",
+    "tsx": "^4.20.3",
     "typescript": "^5.9.2"
   },
   "engines": {
