--- a/package.json
+++ b/package.json
@@ -38,20 +38,20 @@
     "lint:all:check": "eslint src test",
     "pretty": "prettier -u --write \"**/*\" --log-level warn",
     "test": "yarn build && tsx test/all-tests.ts",
-    "test:js": "yarn build && node test/all-tests.js",
+    "test:quick": "yarn build && tsx test/quick-tests.ts",
+    "test:fast": "yarn build && tsx test/quick-tests.ts",
     "test:unit": "tsx test/unit.test.ts",
-    "test:unit:js": "node test/unit.test.js",
-    "test:simple": "tsx test/simple.test.ts",
     "test:server": "tsx test/real-server-test.ts",
-    "test:server:js": "node test/real-server-test.js",
     "test:comprehensive": "tsx test/comprehensive-real-server-test.ts",
-    "test:comprehensive:js": "node test/comprehensive-real-server-test.js",
     "test:boundary": "tsx test/boundary-parameter-test.ts",
-    "test:boundary:js": "node test/boundary-parameter-test.js",
     "test:user-agent": "tsx test/user-agent-tests.ts",
-    "test:user-agent:js": "node test/user-agent-tests.js",
-    "test:coverage": "node --experimental-test-coverage test/coverage.test.js",
-    "test:coverage-report": "node scripts/coverage-report.js",
+    "test:coverage": "tsx test/coverage.test.ts",
+    "test:coverage-native": "tsx --test --experimental-test-coverage test/coverage-native.test.ts",
+    "test:coverage-real-api": "yarn build && tsx --test --experimental-test-coverage test/coverage-native.test.ts",
+    "test:coverage-comprehensive": "yarn build && tsx --test --experimental-test-coverage test/comprehensive-coverage.test.ts",
+    "test:coverage-comprehensive": "yarn build && tsx --test --experimental-test-coverage test/comprehensive-coverage.test.ts",
+    "test:coverage-badge": "tsx scripts/generate-coverage-badge.ts",
+    "test:all-with-coverage": "npm run test:coverage-real-api && npm run test:coverage-badge",
     "test:watch": "tsx --watch test/unit.test.ts"
   },
   "keywords": [
@@ -86,6 +86,7 @@
     "rollup": "^4.9.6",
     "rollup-plugin-dts": "^6.2.1",
     "tslib": "^2.8.1",
+    "tree-kill": "^1.2.2",
     "tsx": "^4.20.3",
     "typescript": "^5.9.2"
   },
